# veryla

./: .gitignore  COPYRIGHT  Cargo.toml  Makefile  README.md  Veryl.toml  Veryla.toml
.github/workflows/: regression.yml  std_deploy.yml
crates/aligner/: Cargo.toml
crates/aligner/src/: lib.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: analyzer.rs  analyzer_error.rs  attribute.rs  attribute_table.rs  evaluator.rs  handlers.rs  msb_table.rs  namespace.rs  namespace_table.rs  range_table.rs  symbol.rs  symbol_path.rs  symbol_table.rs  tests.rs  type_dag.rs  unsafe.rs  unsafe_table.rs  var_ref.rs
crates/analyzer/src/handlers/: check_attribute.rs  check_embed_include.rs  check_enum.rs  check_expression.rs  check_function.rs  check_identifier.rs  check_modport.rs  check_msb_lsb.rs  check_number.rs  check_port.rs  check_power_domain.rs  check_power_enable.rs  check_power_reset.rs  check_proto.rs  check_separator.rs  check_statement.rs  check_type.rs  check_unsafe.rs  check_var_ref.rs  create_reference.rs  create_symbol_table.rs
crates/emitter/: Cargo.toml
crates/emitter/src/: emitter.rs  tests.rs
crates/formatter/: Cargo.toml
crates/formatter/src/: formatter.rs
crates/languageserver/: Cargo.toml  build.rs
crates/languageserver/src/: backend.rs  keyword.rs  server.rs  tests.rs
crates/mdbook/: Cargo.toml
crates/mdbook/src/: main.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: build.rs  lib.rs  lint.rs  lockfile.rs  metadata.rs  metadata_error.rs  tests.rs
crates/metadata/src/git/: gitoxide.rs
crates/parser/: Cargo.toml  build.rs  veryla.par
crates/parser/src/: finder.rs  generated.rs  last_token.rs  lib.rs  parser.rs  parser_error.rs  stringifier.rs  tests.rs  veryla_grammar.rs  veryla_grammar_trait.rs  veryla_parser.rs  veryla_token.rs  veryla_walker.rs
crates/path/: Cargo.toml
crates/path/src/: lib.rs
crates/sourcemap/: Cargo.toml
crates/std/: Cargo.toml  build.rs
crates/std/src/: lib.rs
crates/tests/: Cargo.toml  build.rs
crates/tests/benches/: benchmark.rs
crates/tests/src/: lib.rs
crates/veryla/: Cargo.toml
crates/veryla/src/: cmd_build.rs  cmd_check.rs  cmd_clean.rs  cmd_doc.rs  cmd_dump.rs  cmd_fmt.rs  cmd_init.rs  cmd_metadata.rs  cmd_new.rs  cmd_publish.rs  cmd_test.rs  cmd_update.rs  lib.rs  main.rs  runner.rs
crates/veryla/src/doc/: doc_builder.rs
crates/veryla/src/runner/: cocotb.rs  vcs.rs  verilator.rs  vivado.rs
support/highlightjs/: package.json
support/highlightjs/src/languages/: veryla.js
support/vscode/: CHANGELOG.md  Makefile  package-lock.json  package.json
support/vscode/src/: extension.ts
support/vscode/syntaxes/: veryla.tmLanguage.json
