[package]
name                  = "veryla-aligner"
version               = "0.13.3"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"

[dependencies]
veryla-parser = {version = "0.13.3", path = "../parser"}
