[package]
name                  = "veryla-emitter"
version               = "0.1.0"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde           = {workspace = true}
strnum_bitwidth = {workspace = true}
veryla-aligner   = {version = "0.1.0", path = "../aligner"}
veryla-analyzer  = {version = "0.1.0", path = "../analyzer"}
veryla-metadata  = {version = "0.1.0", path = "../metadata"}
veryla-parser    = {version = "0.1.0", path = "../parser"}
veryla-sourcemap = {version = "0.1.0", path = "../sourcemap"}

[dev-dependencies]
toml = {workspace = true}
