[package]
name                  = "veryla-formatter"
version               = "0.13.3"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veryla-aligner  = {version = "0.13.3", path = "../aligner"}
veryla-metadata = {version = "0.13.3", path = "../metadata"}
veryla-parser   = {version = "0.13.3", path = "../parser"}
