[package]
name                  = "veryla-ls"
version               = "0.13.3"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true
edition               = "2021"
exclude               = ["build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossbeam-channel = "0.5.6"
async-channel     = "2.3"
dashmap           = "6.1.0"
futures           = {workspace = true}
glob              = "0.3.2"
ropey             = "1.6.1"
miette            = {workspace = true}
serde_json        = {workspace = true}
tokio             = {workspace = true}
tower-lsp         = "0.20.0"
veryla-analyzer    = {version = "0.13.3", path = "../analyzer"}
veryla-formatter   = {version = "0.13.3", path = "../formatter"}
veryla-metadata    = {version = "0.13.3", path = "../metadata"}
veryla-parser      = {version = "0.13.3", path = "../parser"}
veryla-path        = {version = "0.13.3", path = "../path"}
