[package]
name = "veryla-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veryla-analyzer  = {version = "0.1.0", path = "../analyzer"}
veryla-emitter   = {version = "0.1.0", path = "../emitter"}
veryla-formatter = {version = "0.1.0", path = "../formatter"}
veryla-metadata  = {version = "0.1.0", path = "../metadata"}
veryla-parser    = {version = "0.1.0", path = "../parser"}
veryla-path      = {version = "0.1.0", path = "../path"}
veryla           = {version = "0.1.0", path = "../veryla" }

[dev-dependencies]
criterion = {package = "codspeed-criterion-compat", version = "2.7"}

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = {version = "0.14.0", features = ["flamegraph"]}

[build-dependencies]
walkdir = {workspace = true}

[[bench]]
name = "benchmark"
harness = false

[package.metadata.release]
release = false
